Fix call to action with flex column Redid containers in html and flex orientation to have sign up button be in alignment with the two statements.

--- a/style.css
+++ b/style.css
@@ -114,26 +114,32 @@ h3{
 }
 .end{
   display:flex;
-  flex-direction: column;
   padding:4% 10%;
   color:white;
+  justify-content: center;
+  align-items: center;
 
 }
 .container {
-    border-color:white;
+    display:flex;
+    flex: 1 1 0%;
     border-radius: 4px;
     padding: 2% 5%;
-    background-color: #3882F6;
-}
-.statement{
-    display:flex;
+    background-color: #3882F6; 
     justify-content: space-between;
+    align-items: center;
     
 }
+
 .button2{
     border:2px solid white;
+    align-items: flex-end;
 }
 .call{
+    color:white;
+  
+}
+p.calltitle{
     color:white;
 }
 .footer{
